--- a/config/cable.yml
+++ b/config/cable.yml
@@ -6,5 +6,7 @@ test:
 
 production:
   adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+  # url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+  url: redis://redistogo:ba7a6b1f89426cad2118fbd0ebb2c5a2@pearlfish.redistogo.com:9885/
+
   channel_prefix: mirror_api_production
